// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`LeaderboardPopup should render 1`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <LeaderboardPopup
    copy={
      Object {
        "leaderboardHeading": "leaderboard heading test",
        "leaderboardSubheading": "leaderboard subheading test",
        "surgeHeading": "surge heading test",
        "surgeSubheading": "surge subheading test",
      }
    }
    hasNotification={false}
    labels={
      Array [
        Object {
          "name": "yucoin",
          "onPress": [MockFunction],
        },
        Object {
          "name": "quests",
          "onPress": [MockFunction],
        },
        Object {
          "name": "leaderboard",
          "onPress": [MockFunction],
        },
        Object {
          "name": "rewards",
          "onPress": [MockFunction],
        },
      ]
    }
    onUpdateLeaderboardPopupVisibility={[MockFunction]}
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateError": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "function",
    "props": Object {
      "children": Array [
        <View
          onLayout={[Function]}
          style={
            Object {
              "bottom": 0,
              "left": 0,
              "position": "absolute",
              "right": 0,
              "top": 0,
            }
          }
        />,
        null,
        <View
          style={
            Array [
              Object {
                "bottom": 34,
                "position": "absolute",
              },
              Object {
                "zIndex": 2,
              },
            ]
          }
        >
          <NavBar
            activeIndex={0}
            colour="darker"
            hasNotification={false}
            labels={
              Array [
                Object {
                  "name": "yucoin",
                  "onPress": [Function],
                },
                Object {
                  "name": "quests",
                  "onPress": [Function],
                },
                Object {
                  "name": "leaderboard",
                  "onPress": [Function],
                },
                Object {
                  "name": "rewards",
                  "onPress": [Function],
                },
              ]
            }
          />
        </View>,
        <PopUp
          caretDirection="bottom"
          caretPosition={
            Object {
              "left": 70,
            }
          }
          copy={
            Object {
              "leaderboardHeading": "leaderboard heading test",
              "leaderboardSubheading": "leaderboard subheading test",
              "surgeHeading": "surge heading test",
              "surgeSubheading": "surge subheading test",
            }
          }
          isShowingButton={true}
          onPress={[Function]}
          position={
            Object {
              "bottom": 120,
            }
          }
          type="leaderboard"
        />,
        <Close
          onPress={[Function]}
          style={
            Object {
              "zIndex": 2,
            }
          }
        />,
      ],
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "onLayout": [Function],
          "style": Object {
            "bottom": 0,
            "left": 0,
            "position": "absolute",
            "right": 0,
            "top": 0,
          },
        },
        "ref": [Function],
        "rendered": null,
        "type": [Function],
      },
      null,
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "children": <NavBar
            activeIndex={0}
            colour="darker"
            hasNotification={false}
            labels={
              Array [
                Object {
                  "name": "yucoin",
                  "onPress": [Function],
                },
                Object {
                  "name": "quests",
                  "onPress": [Function],
                },
                Object {
                  "name": "leaderboard",
                  "onPress": [Function],
                },
                Object {
                  "name": "rewards",
                  "onPress": [Function],
                },
              ]
            }
          />,
          "style": Array [
            Object {
              "bottom": 34,
              "position": "absolute",
            },
            Object {
              "zIndex": 2,
            },
          ],
        },
        "ref": null,
        "rendered": Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "activeIndex": 0,
            "colour": "darker",
            "hasNotification": false,
            "labels": Array [
              Object {
                "name": "yucoin",
                "onPress": [Function],
              },
              Object {
                "name": "quests",
                "onPress": [Function],
              },
              Object {
                "name": "leaderboard",
                "onPress": [Function],
              },
              Object {
                "name": "rewards",
                "onPress": [Function],
              },
            ],
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "caretDirection": "bottom",
          "caretPosition": Object {
            "left": 70,
          },
          "copy": Object {
            "leaderboardHeading": "leaderboard heading test",
            "leaderboardSubheading": "leaderboard subheading test",
            "surgeHeading": "surge heading test",
            "surgeSubheading": "surge subheading test",
          },
          "isShowingButton": true,
          "onPress": [Function],
          "position": Object {
            "bottom": 120,
          },
          "type": "leaderboard",
        },
        "ref": null,
        "rendered": null,
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "function",
        "props": Object {
          "onPress": [Function],
          "style": Object {
            "zIndex": 2,
          },
        },
        "ref": null,
        "rendered": null,
        "type": [Function],
      },
    ],
    "type": Symbol(react.fragment),
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "function",
      "props": Object {
        "children": Array [
          <View
            onLayout={[Function]}
            style={
              Object {
                "bottom": 0,
                "left": 0,
                "position": "absolute",
                "right": 0,
                "top": 0,
              }
            }
          />,
          null,
          <View
            style={
              Array [
                Object {
                  "bottom": 34,
                  "position": "absolute",
                },
                Object {
                  "zIndex": 2,
                },
              ]
            }
          >
            <NavBar
              activeIndex={0}
              colour="darker"
              hasNotification={false}
              labels={
                Array [
                  Object {
                    "name": "yucoin",
                    "onPress": [Function],
                  },
                  Object {
                    "name": "quests",
                    "onPress": [Function],
                  },
                  Object {
                    "name": "leaderboard",
                    "onPress": [Function],
                  },
                  Object {
                    "name": "rewards",
                    "onPress": [Function],
                  },
                ]
              }
            />
          </View>,
          <PopUp
            caretDirection="bottom"
            caretPosition={
              Object {
                "left": 70,
              }
            }
            copy={
              Object {
                "leaderboardHeading": "leaderboard heading test",
                "leaderboardSubheading": "leaderboard subheading test",
                "surgeHeading": "surge heading test",
                "surgeSubheading": "surge subheading test",
              }
            }
            isShowingButton={true}
            onPress={[Function]}
            position={
              Object {
                "bottom": 120,
              }
            }
            type="leaderboard"
          />,
          <Close
            onPress={[Function]}
            style={
              Object {
                "zIndex": 2,
              }
            }
          />,
        ],
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "onLayout": [Function],
            "style": Object {
              "bottom": 0,
              "left": 0,
              "position": "absolute",
              "right": 0,
              "top": 0,
            },
          },
          "ref": [Function],
          "rendered": null,
          "type": [Function],
        },
        null,
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "children": <NavBar
              activeIndex={0}
              colour="darker"
              hasNotification={false}
              labels={
                Array [
                  Object {
                    "name": "yucoin",
                    "onPress": [Function],
                  },
                  Object {
                    "name": "quests",
                    "onPress": [Function],
                  },
                  Object {
                    "name": "leaderboard",
                    "onPress": [Function],
                  },
                  Object {
                    "name": "rewards",
                    "onPress": [Function],
                  },
                ]
              }
            />,
            "style": Array [
              Object {
                "bottom": 34,
                "position": "absolute",
              },
              Object {
                "zIndex": 2,
              },
            ],
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "activeIndex": 0,
              "colour": "darker",
              "hasNotification": false,
              "labels": Array [
                Object {
                  "name": "yucoin",
                  "onPress": [Function],
                },
                Object {
                  "name": "quests",
                  "onPress": [Function],
                },
                Object {
                  "name": "leaderboard",
                  "onPress": [Function],
                },
                Object {
                  "name": "rewards",
                  "onPress": [Function],
                },
              ],
            },
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "caretDirection": "bottom",
            "caretPosition": Object {
              "left": 70,
            },
            "copy": Object {
              "leaderboardHeading": "leaderboard heading test",
              "leaderboardSubheading": "leaderboard subheading test",
              "surgeHeading": "surge heading test",
              "surgeSubheading": "surge subheading test",
            },
            "isShowingButton": true,
            "onPress": [Function],
            "position": Object {
              "bottom": 120,
            },
            "type": "leaderboard",
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "function",
          "props": Object {
            "onPress": [Function],
            "style": Object {
              "zIndex": 2,
            },
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
      ],
      "type": Symbol(react.fragment),
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getDerivedStateFromProps": true,
          "getSnapshotBeforeUpdate": true,
          "setState": Object {
            "skipsComponentDidUpdateOnNullish": true,
          },
        },
      },
    },
    "attachTo": undefined,
    "hydrateIn": undefined,
  },
}
`;

exports[`LeaderboardPopup should render navbar with notificaiton 1`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <LeaderboardPopup
    copy={
      Object {
        "leaderboardHeading": "leaderboard heading test",
        "leaderboardSubheading": "leaderboard subheading test",
        "surgeHeading": "surge heading test",
        "surgeSubheading": "surge subheading test",
      }
    }
    hasNotification={true}
    labels={
      Array [
        Object {
          "name": "yucoin",
          "onPress": [MockFunction],
        },
        Object {
          "name": "quests",
          "onPress": [MockFunction],
        },
        Object {
          "name": "leaderboard",
          "onPress": [MockFunction],
        },
        Object {
          "name": "rewards",
          "onPress": [MockFunction],
        },
      ]
    }
    onUpdateLeaderboardPopupVisibility={[MockFunction]}
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateError": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "function",
    "props": Object {
      "children": Array [
        <View
          onLayout={[Function]}
          style={
            Object {
              "bottom": 0,
              "left": 0,
              "position": "absolute",
              "right": 0,
              "top": 0,
            }
          }
        />,
        null,
        <View
          style={
            Array [
              Object {
                "bottom": 34,
                "position": "absolute",
              },
              Object {
                "zIndex": 2,
              },
            ]
          }
        >
          <NavBar
            activeIndex={0}
            colour="darker"
            hasNotification={true}
            labels={
              Array [
                Object {
                  "name": "yucoin",
                  "onPress": [Function],
                },
                Object {
                  "name": "quests",
                  "onPress": [Function],
                },
                Object {
                  "name": "leaderboard",
                  "onPress": [Function],
                },
                Object {
                  "name": "rewards",
                  "onPress": [Function],
                },
              ]
            }
          />
        </View>,
        <PopUp
          caretDirection="bottom"
          caretPosition={
            Object {
              "left": 70,
            }
          }
          copy={
            Object {
              "leaderboardHeading": "leaderboard heading test",
              "leaderboardSubheading": "leaderboard subheading test",
              "surgeHeading": "surge heading test",
              "surgeSubheading": "surge subheading test",
            }
          }
          isShowingButton={true}
          onPress={[Function]}
          position={
            Object {
              "bottom": 120,
            }
          }
          type="leaderboard"
        />,
        <Close
          onPress={[Function]}
          style={
            Object {
              "zIndex": 2,
            }
          }
        />,
      ],
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "onLayout": [Function],
          "style": Object {
            "bottom": 0,
            "left": 0,
            "position": "absolute",
            "right": 0,
            "top": 0,
          },
        },
        "ref": [Function],
        "rendered": null,
        "type": [Function],
      },
      null,
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "children": <NavBar
            activeIndex={0}
            colour="darker"
            hasNotification={true}
            labels={
              Array [
                Object {
                  "name": "yucoin",
                  "onPress": [Function],
                },
                Object {
                  "name": "quests",
                  "onPress": [Function],
                },
                Object {
                  "name": "leaderboard",
                  "onPress": [Function],
                },
                Object {
                  "name": "rewards",
                  "onPress": [Function],
                },
              ]
            }
          />,
          "style": Array [
            Object {
              "bottom": 34,
              "position": "absolute",
            },
            Object {
              "zIndex": 2,
            },
          ],
        },
        "ref": null,
        "rendered": Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "activeIndex": 0,
            "colour": "darker",
            "hasNotification": true,
            "labels": Array [
              Object {
                "name": "yucoin",
                "onPress": [Function],
              },
              Object {
                "name": "quests",
                "onPress": [Function],
              },
              Object {
                "name": "leaderboard",
                "onPress": [Function],
              },
              Object {
                "name": "rewards",
                "onPress": [Function],
              },
            ],
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "caretDirection": "bottom",
          "caretPosition": Object {
            "left": 70,
          },
          "copy": Object {
            "leaderboardHeading": "leaderboard heading test",
            "leaderboardSubheading": "leaderboard subheading test",
            "surgeHeading": "surge heading test",
            "surgeSubheading": "surge subheading test",
          },
          "isShowingButton": true,
          "onPress": [Function],
          "position": Object {
            "bottom": 120,
          },
          "type": "leaderboard",
        },
        "ref": null,
        "rendered": null,
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "function",
        "props": Object {
          "onPress": [Function],
          "style": Object {
            "zIndex": 2,
          },
        },
        "ref": null,
        "rendered": null,
        "type": [Function],
      },
    ],
    "type": Symbol(react.fragment),
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "function",
      "props": Object {
        "children": Array [
          <View
            onLayout={[Function]}
            style={
              Object {
                "bottom": 0,
                "left": 0,
                "position": "absolute",
                "right": 0,
                "top": 0,
              }
            }
          />,
          null,
          <View
            style={
              Array [
                Object {
                  "bottom": 34,
                  "position": "absolute",
                },
                Object {
                  "zIndex": 2,
                },
              ]
            }
          >
            <NavBar
              activeIndex={0}
              colour="darker"
              hasNotification={true}
              labels={
                Array [
                  Object {
                    "name": "yucoin",
                    "onPress": [Function],
                  },
                  Object {
                    "name": "quests",
                    "onPress": [Function],
                  },
                  Object {
                    "name": "leaderboard",
                    "onPress": [Function],
                  },
                  Object {
                    "name": "rewards",
                    "onPress": [Function],
                  },
                ]
              }
            />
          </View>,
          <PopUp
            caretDirection="bottom"
            caretPosition={
              Object {
                "left": 70,
              }
            }
            copy={
              Object {
                "leaderboardHeading": "leaderboard heading test",
                "leaderboardSubheading": "leaderboard subheading test",
                "surgeHeading": "surge heading test",
                "surgeSubheading": "surge subheading test",
              }
            }
            isShowingButton={true}
            onPress={[Function]}
            position={
              Object {
                "bottom": 120,
              }
            }
            type="leaderboard"
          />,
          <Close
            onPress={[Function]}
            style={
              Object {
                "zIndex": 2,
              }
            }
          />,
        ],
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "onLayout": [Function],
            "style": Object {
              "bottom": 0,
              "left": 0,
              "position": "absolute",
              "right": 0,
              "top": 0,
            },
          },
          "ref": [Function],
          "rendered": null,
          "type": [Function],
        },
        null,
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "children": <NavBar
              activeIndex={0}
              colour="darker"
              hasNotification={true}
              labels={
                Array [
                  Object {
                    "name": "yucoin",
                    "onPress": [Function],
                  },
                  Object {
                    "name": "quests",
                    "onPress": [Function],
                  },
                  Object {
                    "name": "leaderboard",
                    "onPress": [Function],
                  },
                  Object {
                    "name": "rewards",
                    "onPress": [Function],
                  },
                ]
              }
            />,
            "style": Array [
              Object {
                "bottom": 34,
                "position": "absolute",
              },
              Object {
                "zIndex": 2,
              },
            ],
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "activeIndex": 0,
              "colour": "darker",
              "hasNotification": true,
              "labels": Array [
                Object {
                  "name": "yucoin",
                  "onPress": [Function],
                },
                Object {
                  "name": "quests",
                  "onPress": [Function],
                },
                Object {
                  "name": "leaderboard",
                  "onPress": [Function],
                },
                Object {
                  "name": "rewards",
                  "onPress": [Function],
                },
              ],
            },
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "caretDirection": "bottom",
            "caretPosition": Object {
              "left": 70,
            },
            "copy": Object {
              "leaderboardHeading": "leaderboard heading test",
              "leaderboardSubheading": "leaderboard subheading test",
              "surgeHeading": "surge heading test",
              "surgeSubheading": "surge subheading test",
            },
            "isShowingButton": true,
            "onPress": [Function],
            "position": Object {
              "bottom": 120,
            },
            "type": "leaderboard",
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "function",
          "props": Object {
            "onPress": [Function],
            "style": Object {
              "zIndex": 2,
            },
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
      ],
      "type": Symbol(react.fragment),
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getDerivedStateFromProps": true,
          "getSnapshotBeforeUpdate": true,
          "setState": Object {
            "skipsComponentDidUpdateOnNullish": true,
          },
        },
      },
    },
    "attachTo": undefined,
    "hydrateIn": undefined,
  },
}
`;
